# report_generator

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/api/: routes.py
app/exceptions/: handlers.py
app/schemas/: enums.py  input.py
app/services/: file_service.py
app/services/file_parsers/: base_parser.py  excel_parser.py  tsv_parser.py  txt_parser.py
app/utils/: validators.py
